# Core_Python

./: .gitignore  I_have_read_these_BOOKS  I_have_read_these_BOOKS.md  Puthon_types.py  Questions.py  README.md  example.md  pyproject.toml
Aleksandr Shvec - design patterns/: intersting things.py  pyproject.toml
Aleksandr_Shvec_design_patterns/: pyproject.toml
Aleksandr_Shvec_design_patterns/patterns/10_facade/: cleaned_data.json  facade.py  facade_cart.py  facade_files.py  users.json
Aleksandr_Shvec_design_patterns/patterns/11_flyweigh/: flyweigh.py  flyweigh_icon_on_webpage.py  flyweigh_text_editor.py
Aleksandr_Shvec_design_patterns/patterns/12_proxy/: proxy.py  proxy_cash_api.py  proxy_image.py
Aleksandr_Shvec_design_patterns/patterns/13_chain_of_responsibility/: QA_chain_middleware.md  chain.py  chain_logger.py  chain_middleware.py
Aleksandr_Shvec_design_patterns/patterns/4_prototype/: prototype.py  prototype_documents.py  prototype_web_serever.py
Aleksandr_Shvec_design_patterns/patterns/6_adapter/: adapter_logger.py
Aleksandr_Shvec_design_patterns/patterns/8_composite/: composite.py  composite_ restaurant.py  composite_filter_products.py
Aleksandr_Shvec_design_patterns/patterns/9_decorator/: decorator.py
Bill_Lubanovic_FastAPI/: main.py
Ch 2 Data Types, Values, Variables, and Names/: Puthon_types.py
Mark_Lutz/: f1.py  (+7 more)
_Other_practice_python/socketio/: pyproject.toml
_Other_practice_python/socketio/fastapi/: use_data_.py
_Other_practice_python/socketio/tasks/: 2_2_practice_1.py  2_3_practice_2.py  2_5_practice_1_2_3.py  3_1_practice_1.py
(+203 files in other folders)
