[tool.poetry]
name = "core-python"
version = "0.1.0"
description = ""
authors = ["sanch13 <sanch13sanch@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
colorama = "^0.4.6"
sqlalchemy = "2.0.38"
fastapi = "0.115.11"
uvicorn = "0.34.0"
psycopg2-binary = "2.9.10"
alembic = "1.14.1"
pydantic = "2.10.6"
pydantic-settings = "2.8.1"
pyqt5 = "5.15.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
