[project]
name = "aleksandr-shvec-design-patterns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "ty>=0.0.9",
]

[tool.ty.rules]
unused-ignore-comment = "warn"
possibly-missing-import = "error"
