[project]
name = "socketio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.18",
    "eventlet>=0.40.0",
    "fastapi>=0.115.12",
    "flask>=3.1.1",
    "python-socketio>=5.13.0",
    "uvicorn==0.34.2",
    "werkzeug==3.1.3",
]
